common: migrate query and queryChanges method calls